Another intermediate check-in with changes to all streaming protocols